// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringInput test component arguments test StringInput component has defaultValue 1`] = `
<article
  className="wonder-string-input"
>
  <input
    className="input-component float-input"
    onBlur={[Function]}
    onChange={[Function]}
    type="text"
    value="#ffffff"
  />
</article>
`;

exports[`StringInput test component arguments test StringInput component has defaultValue and label 1`] = `
<article
  className="wonder-string-input"
>
  <span
    className="component-label"
  >
    color : 
  </span>
  <input
    className="input-component float-input"
    onBlur={[Function]}
    onChange={[Function]}
    type="text"
    value="#c0c0c0"
  />
</article>
`;

exports[`StringInput test component arguments test StringInput component has label 1`] = `
<article
  className="wonder-string-input"
>
  <span
    className="component-label"
  >
    color : 
  </span>
  <input
    className="input-component float-input"
    onBlur={[Function]}
    onChange={[Function]}
    type="text"
    value=""
  />
</article>
`;

exports[`StringInput test component arguments test StringInput component hasn't argument 1`] = `
<article
  className="wonder-string-input"
>
  <input
    className="input-component float-input"
    onBlur={[Function]}
    onChange={[Function]}
    type="text"
    value=""
  />
</article>
`;

exports[`StringInput test component set value and trigger event stringInput component can set any symbol 1`] = `
<article
  className="wonder-string-input"
>
  <span
    className="component-label"
  >
    xyz : 
  </span>
  <input
    className="input-component float-input"
    onBlur={[Function]}
    onChange={[Function]}
    type="text"
    value="351687.5445456654"
  />
</article>
`;
